--- a/Dockerfile2
+++ b/Dockerfile2
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y pkg-config build-essential default-libm
 # Install dependencies
 
 RUN pip install mysqlclient
+RUN pip install django-prometheus
 RUN wget https://dlm.mariadb.com/2678574/Connectors/c/connector-c-3.3.3/mariadb-connector-c-3.3.3-debian-bullseye-amd64.tar.gz -O - | tar -zxf - --strip-components=1 -C /usr
 
 
