--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,21 @@
         "src": "emailchecker/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python 3.9" }
-    }],
-    "routes": [
+    },
+    {
+        "src": "build_file.sh",
+        "use":"@vercel/static-build",
+        "config": {
+            "distDir": "staticfiles_build"
+        }
+    }
+],
+"routes": [
+
+    {
+        "src": "/static/(.*)",
+        "dest":"/static/$1"
+    },
         {
             "src": "/(.*)",
             "dest": "emailchecker/wsgi.py"
