--- a/emailchecker/vercel.json
+++ b/emailchecker/vercel.json
@@ -5,7 +5,7 @@
         "config": { "maxLambdaSize": "15mb", "runtime": "python 3.9" }
     },
     {
-        "src": "build_file.sh",
+        "src": "build_files.sh",
         "use":"@vercel/static-build",
         "config": {
             "distDir": "staticfiles_build"
@@ -22,5 +22,9 @@
             "src": "/(.*)",
             "dest": "emailchecker/wsgi.py"
         }
-    ]
+    ],
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/" }
+        ]
+      
 }
