Updated settings.py and vercel.json

--- a/emailchecker/vercel.json
+++ b/emailchecker/vercel.json
@@ -1,5 +1,7 @@
-{
-    "builds": [{
+{   
+    "version":2,
+    "builds": [
+        {
         "src": "emailchecker/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python 3.9" }
