--- a/emailchecker/vercel.json
+++ b/emailchecker/vercel.json
@@ -24,7 +24,10 @@
             "src": "/(.*)",
             "dest": "emailchecker/wsgi.py"
         }
-    ]
+    ],
+    
+        "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    }
     
       
-}
+
