--- a/emailchecker/vercel.json
+++ b/emailchecker/vercel.json
@@ -26,7 +26,7 @@
         }
     ],
     
-        "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+        "rewrites": [{ "source": "/(.*)", "destination": "emailchecker/wsgi.py" }]
     }
     
       
