--- a/emailchecker/vercel.json
+++ b/emailchecker/vercel.json
@@ -7,6 +7,8 @@
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
       { "src": "/(.*)", "dest": "/emailchecker/wsgi.py" }
-    ]
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "emailchecker/wsgi.py" }]
+
   }
   
