--- a/emailchecker/vercel.json
+++ b/emailchecker/vercel.json
@@ -1,14 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "emailchecker/wsgi.py", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
-      { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "distDir": "staticfiles_build" } }
-    ],
-    "routes": [
-      { "src": "/static/(.*)", "dest": "/static/$1" },
-      { "src": "/(.*)", "dest": "/emailchecker/wsgi.py" }
-    ],
-    "rewrites": [{ "source": "/(.*)", "destination": "emailchecker/wsgi.py" }]
+"rewrites": [{ "source": "/(.*)", "destination": "/" }]
 
   }
   
