--- a/emailchecker/vercel.json
+++ b/emailchecker/vercel.json
@@ -7,6 +7,13 @@
     "routes": [
       { "src": "/static/(.*)", "dest": "/static/$1" },
       { "src": "/(.*)", "dest": "/emailchecker/wsgi.py" }
-    ]
+    ],
+    "env": {
+      "DATABASE_NAME": "django_project",
+      "DATABASE_USER": "root",
+      "DATABASE_PASSWORD": "Newship@123",
+      "DATABASE_HOST": "localhost",
+      "DATABASE_PORT": "3306"
+    }
   }
   
