--- a/emailchecker/vercel.json
+++ b/emailchecker/vercel.json
@@ -1,19 +1,20 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "emailchecker/wsgi.py", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
-      { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "distDir": "staticfiles_build" } }
-    ],
-    "routes": [
-      { "src": "/static/(.*)", "dest": "/static/$1" },
-      { "src": "/(.*)", "dest": "/emailchecker/wsgi.py" }
-    ],
-    "env": {
-      "DATABASE_NAME": "django_project",
-      "DATABASE_USER": "root",
-      "DATABASE_PASSWORD": "Newship@123",
-      "DATABASE_HOST": "localhost",
-      "DATABASE_PORT": "3306"
-    }
+  "version": 2,
+  "builds": [
+    { "src": "emailchecker/wsgi.py", "use": "@vercel/python", "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" } },
+    { "src": "build_files.sh", "use": "@vercel/static-build", "config": { "distDir": "staticfiles_build" } }
+  ],
+  "routes": [
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(.*)", "dest": "/emailchecker/wsgi.py" }
+  ],
+  "env": {
+    "DATABASE_NAME": "django_project",
+    "DATABASE_USER": "root",
+    "DATABASE_PASSWORD": "Newship@123",
+    "DATABASE_HOST": "localhost",
+    "DATABASE_PORT": "3306",
+    "DATABASE_URL_mysql": "mysql://root:Newship@123@localhost:3306/django_project",
+    "DATABASE_URL_sqlite": "sqlite:///path_to_your_db.sqlite3"
   }
-  
+}
